Don't collect full GPU info or D3D12/Vulkan info if in-process-gpu.

Otherwise it will trigger a gl_factory.cc assertion.

BUG=831168
TEST=chrome --in-process-gpu
R=oetuaho@nvidia.com

Change-Id: Ib50dd4350619d516d88bb30412d84a0f2644f1d5
Reviewed-on: https://chromium-review.googlesource.com/1024859
Reviewed-by: Chris Blume <cblume@chromium.org>
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553201}